MYEM-6267 #time 1h #comment fix overflow-y in root div

--- a/src/common/ui-kit/fuse/styles/app-base.css
+++ b/src/common/ui-kit/fuse/styles/app-base.css
@@ -31,6 +31,10 @@ html, body, #root {
     height: 100%;
 }
 
+#root {
+    overflow-y: auto;
+}
+
 h1, .h1 {
     font-size: 24px;
 }
